--- a/meubly-front/package.json
+++ b/meubly-front/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
