--- a/meubly-front/package.json
+++ b/meubly-front/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
+    "@primeuix/themes": "^1.1.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.9.0",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
