--- a/meubly-back/package.json
+++ b/meubly-back/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node app.js",
+    "build": "npm install",
     "seed": "node scripts/seedDatabase.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,5 +27,6 @@
   },
   "devDependencies": {
     "prisma": "^6.5.0"
+
   }
 }
