--- a/meubly-front/package.json
+++ b/meubly-front/package.json
@@ -11,21 +11,19 @@
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
     "@primeuix/themes": "^1.1.1",
-    "@supabase/supabase-js": "^2.49.4",
-    "@tailwindcss/vite": "^4.0.9",
-    "axios": "^1.9.0",
-    "pinia": "^3.0.1",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.3.4",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vuejs-paginate-next": "^1.0.2"
+    "@supabase/supabase-js": "^2.39.0",
+    "axios": "^1.6.2",
+    "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.45.0",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
-    "vite": "^6.1.0"
+    "@vitejs/plugin-vue": "^4.5.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.10"
   }
 }
