--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,5 @@ services:
     startCommand: cd meubly-back && node app.js
     envVars:
       - key: NODE_ENV
-        value: production 
+        value: production
+    rootDir: . 
