--- a/meubly-back/package.json
+++ b/meubly-back/package.json
@@ -11,7 +11,10 @@
     "dev": "nodemon app.js",
     "build": "npm install",
     "seed": "node scripts/seedDatabase.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
@@ -28,6 +31,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "supertest": "^6.3.3",
+    "vitest": "^3.2.4"
   }
 }
