--- a/meubly-front/package.json
+++ b/meubly-front/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:run": "vitest run",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "cypress run",
+    "test:all": "npm run test:run && npm run test:e2e"
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
@@ -20,10 +28,17 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^4.5.2",
+    "@vitest/ui": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.6.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.32",
+    "supertest": "^6.3.3",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vitest": "^3.2.4"
   }
 }
