--- a/meubly-back/package.json
+++ b/meubly-back/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
     "build": "npm install",
     "seed": "node scripts/seedDatabase.js",
     "test": "vitest",
@@ -32,7 +35,7 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prisma": "^6.5.0",
-    "supertest": "^6.3.3",
+    "supertest": "^6.3.4",
     "vitest": "^3.2.4"
   }
 }
