--- a/meubly-front/.gitignore
+++ b/meubly-front/.gitignore
@@ -4,6 +4,11 @@ node_modules/
 # Build output
 dist/
 
+# Environment variables - NEVER commit these!
+.env
+.env.*
+!.env.example
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
